# PaperFlow

./: .editorconfig  .gitignore  README.md
.github/workflows/: ci.yml
backend/: __init__.py  build_portable.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/api/: execution.py  models.py  references.py  workflows.py
backend/engine/: __init__.py  context.py  executor.py  nodes.py
backend/providers/: __init__.py  base.py  claude.py  deepseek.py  gemini.py  openai.py
backend/references/: __init__.py  parser.py
backend/services/: __init__.py  vscode.py
backend/storage/: __init__.py  db.py
backend/tests/: conftest.py  test_api.py  test_db.py  test_executor.py
docs/: usage-guide.md
docs/superpowers/plans/: 2026-05-22-paper-writing-workflow-engine.md
electron/: main.js  package-lock.json  package.json  preload.js
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ChatPanel.tsx  ModelSelector.tsx  NodeConfigPanel.tsx  NodePalette.tsx  ReferencePanel.tsx  Toolbar.tsx  WorkflowEditor.tsx  nodeTypes.ts
frontend/src/nodes/: CodeNode.tsx  OutputNode.tsx  PromptNode.tsx
frontend/src/templates/: paper-workflow.ts  uiux-workflow.ts
frontend/src/types/: workflow.ts
frontend/src/utils/: api.ts
frontend/styles/: index.css
scripts/: build.bat  dev.bat  register-startup.py  startup-setup.bat  test-e2e.bat
